[package]
name = "generational_indexlist"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Agilent/generational_token_list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"
