[package]
name = "generational_token_list"
version = "0.1.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Agilent/generational_token_list"
homepage = "https://github.com/Agilent/generational_token_list"
license = "MIT"
description = "A doubly-linked list backed by generational-arena."

exclude = [
    ".github/*"
]


[features]
default = []
iter-mut = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generational-arena = "0.2.8"

[dev-dependencies]
pretty_assertions = "1.0.0"
